第二个鱼阵生成

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@ scenePoint/fishjoy_scenpath_1_c.lua
 scenePoint/fishjoy_scenpath_1_up.lua
 scenePoint/fishjoy_scenpath_1_dw.lua
 scenePoint/fishjoy_scenpath_1_r.lua
+scenePoint/fishjoy_scenepath_2_db.lua
+scenePoint/fishjoy_scenepath_2_ds.lua
+scenePoint/fishjoy_scenepath_2_us.lua
+scenePoint/fishjoy_scenepath_2_ub.lua
