第三个鱼阵代码初步完成

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,7 @@ scenePoint/fishjoy_scenepath_2_db.lua
 scenePoint/fishjoy_scenepath_2_ds.lua
 scenePoint/fishjoy_scenepath_2_us.lua
 scenePoint/fishjoy_scenepath_2_ub.lua
+scenePoint/fishjoy_scenepath_3_1.lua
+scenePoint/fishjoy_scenepath_3_2.lua
+scenePoint/fishjoy_scenepath_3_3.lua
+scenePoint/fishjoy_scenepath_3_4.lua
